View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025822 | Open CASCADE | OCCT:Visualization | public | 2015-02-12 10:54 | 2015-05-14 15:31 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025822: Visualization, TKOpenGl - front material should be used instead of back material in GLSL when distinguish mode is turned off | ||||
Description | Back material is usually undefined in fill area aspect when distinguish mode is turned off, which causes visual inconsistency between GLSL and FFP (default on desktop) rendering paths. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION OCAF XDE box b 10 10 10 NewDocument D MDTV-XCAF XAddShape D b XSetColor D b 0 0 1 explode b f XSetColor D b_1 1 0 0 XShow D vviewparams -proj 1 0.1 0.1 vfit vsetdispmode 1 vclipplane create pln vclipplane set pln view Driver1/Document_D/View1 vclipplane change pln equation -1 0 0 5 # FFP on, pixel is RED3, which is expected vcaps -ffp 1 vreadpixel 200 200 rgb name # GLSL on, pixel should has the same color RED3, but actual color is KHAKI1 vcaps -ffp 0 vreadpixel 200 200 rgb name | ||||
Tags | No tags attached. | ||||
Test case number | v3d glsl(013) distinguish_off | ||||
|
Branch CR25822 has been created by kgv. SHA-1: bbe0aee3bd8a6b91ceaac9dde535b6fd4fca59b8 Detailed log of new commits: Author: kgv Date: Thu Feb 12 10:56:53 2015 +0300 0025822: Visualization, TKOpenGl - front material should be used instead of back material within distinguish mode turned off |
|
box_KO.png (1,713 bytes) |
|
box_OK.png (1,675 bytes) |
|
Branch CR25822 has been updated by kgv. SHA-1: 35e58e9e831f0adf04ed421bb1e28666d638d8be Detailed log of new commits: Author: kgv Date: Thu Feb 12 11:16:30 2015 +0300 add test case v3d/glsl/distinguish_off |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25822 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 35e58e9e831f0adf04ed421bb1e28666d638d8be Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25822-master-occt/Debian60-64/v3d/glsl/distinguish_off.html http://occt-tests/CR25822-master-occt/Windows-32-VC10/v3d/glsl/distinguish_off.html v3d glsl(013) distinguish_off: OK Testing on Linux: occt component : Total MEMORY difference: 84555104 / 86236651 Total CPU difference: 50037.98000000005 / 47876.709999999846 products component : Total MEMORY difference: 22959615 / 22980354 Total CPU difference: 15146.769999999986 / 14500.569999999965 Testing on Windows: occt component : Total MEMORY difference: 40649413 / 40658496 Total CPU difference: 37036.0 / 32754.0 products component : Total MEMORY difference: 11034841 / 11081969 Total CPU difference: 10408.28125 / 10978.125 There are no differences in images found by testdiff. |
|
Branch CR25822 has been deleted by inv. SHA-1: 35e58e9e831f0adf04ed421bb1e28666d638d8be |
occt: master 95b2678c 2015-02-12 12:49:22 Committer: bugmaster Details Diff |
0025822: Visualization, TKOpenGl - front material should be used instead of back material within distinguish mode turned off add test case v3d/glsl/distinguish_off |
Affected Issues 0025822 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
add - tests/v3d/glsl/distinguish_off | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-02-12 10:54 | kgv | New Issue | |
2015-02-12 10:54 | kgv | Assigned To | => kgv |
2015-02-12 10:56 | git | Note Added: 0037407 | |
2015-02-12 10:57 | kgv | Relationship added | related to 0025687 |
2015-02-12 11:04 | kgv | Steps to Reproduce Updated | |
2015-02-12 11:05 | kgv | File Added: box_KO.png | |
2015-02-12 11:05 | kgv | File Added: box_OK.png | |
2015-02-12 11:16 | git | Note Added: 0037408 | |
2015-02-12 11:17 | kgv | Note Added: 0037410 | |
2015-02-12 11:17 | kgv | Assigned To | kgv => bugmaster |
2015-02-12 11:17 | kgv | Status | new => resolved |
2015-02-12 11:17 | kgv | Status | resolved => reviewed |
2015-02-12 11:55 |
|
Assigned To | bugmaster => mkv |
2015-02-12 11:59 | kgv | Summary | Visualization, TKOpenGl - front material should be used instead of back material within distinguish mode turned off => Visualization, TKOpenGl - front material should be used instead of back material in GLSL when distinguish mode is turned off |
2015-02-12 15:41 |
|
Note Added: 0037445 | |
2015-02-12 15:41 |
|
Assigned To | mkv => bugmaster |
2015-02-12 15:41 |
|
Status | reviewed => tested |
2015-02-12 15:41 |
|
Test case number | => v3d glsl(013) distinguish_off |
2015-02-12 17:19 | kgv | Relationship added | related to 0025282 |
2015-02-13 17:55 | bugmaster | Changeset attached | => occt master 95b2678c |
2015-02-13 17:55 | bugmaster | Status | tested => verified |
2015-02-13 17:55 | bugmaster | Resolution | open => fixed |
2015-03-18 13:38 | git | Note Added: 0038606 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |