0025822: Visualization, TKOpenGl - front material should be used instead of back material within distinguish mode turned off

add test case v3d/glsl/distinguish_off